scripts/nullaway/wpi/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8.txt
../wpi/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/main/BlogDemoMain.java:33: error: [NullAway] dereferenced expression searchedAuthor is @Nullable
        Post post = new Post("My First Post", "This is awesome. I am loving it", new Date(), searchedAuthor.getId(), tagList);
                                                                                                           ^
    (see http://t.uber.com/nullaway )
../wpi/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/main/BlogDemoMain.java:49: error: [NullAway] dereferenced expression searchPost is @Nullable
        PostComments comments = new PostComments("John", "john@test.com", "Cool man this rocks !!!", new Date(), searchPost.getId());
                                                                                                                           ^
    (see http://t.uber.com/nullaway )
../wpi/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/main/BlogDemoMain.java:56: error: [NullAway] dereferenced expression searchPost is @Nullable
        comments = new PostComments("Kathy", "kathy@test.com", "Thank you, this is what I was looking for :)", new Date(), searchPost.getId());
                                                                                                                                     ^
    (see http://t.uber.com/nullaway )
../wpi/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/main/BlogDemoMain.java:70: error: [NullAway] dereferenced expression mongoDBFactory is @Nullable
        mongoDBFactory.dropDB(Constants.DB_NAME);
                      ^
    (see http://t.uber.com/nullaway )
../wpi/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/domain/Post.java:36: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.authorId = authorId;
                      ^
    (see http://t.uber.com/nullaway )
../wpi/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/domain/PostComments.java:35: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.postId = postId;
                    ^
    (see http://t.uber.com/nullaway )
../wpi/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/dao/PostCommentsDAOImpl.java:23: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.mongoDBFactory = mongoDBFactory;
                            ^
    (see http://t.uber.com/nullaway )
../wpi/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/dao/AuthorDAOImpl.java:20: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.mongoDBFactory = mongoDBFactory;
                            ^
    (see http://t.uber.com/nullaway )
../wpi/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/dao/PostDAOImpl.java:23: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.mongoDBFactory = mongoDBFactory;
                            ^
    (see http://t.uber.com/nullaway )
Note: ../wpi/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/domain/Post.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
9 errors
